# MagixUI

./: Cargo.toml  README.md  flake.nix  rust-toolchain.toml  rustfmt.toml
src/: lib.rs
