[package]
name = "magixui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# Autodiscover

[[bin]]
name = "yeet"
test = false
bench = false

[[bin]]
name = "splonk"
test = false
bench = false

[dependencies]
log = "0.4"
lexopt = "0.3.0"
thiserror = "1.0"
color-eyre = { version = "0.5", default-features = false }

[dependencies.windows]
version = "0.48"
features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_Storage_FileSystem",
    "Win32_System_Console",
    "Win32_System_Environment",
    "Win32_System_Memory",
    "Win32_System_RemoteDesktop",
    "Win32_System_StationsAndDesktops",
    "Win32_System_Threading",
    "Win32_UI_Shell"
]